# framework_orquestrador_UR3_Gemini_robotics

./: .env  README.md  experimento-ur3.ttt  orquestrador_refatorado.py  pyproject.toml
src/orquestrador/: config.py  main.py  prompts.py
src/orquestrador/adapters/: log_system.py
src/orquestrador/adapters/gui/: overlays.py  window.py
src/orquestrador/adapters/sim/: gripper.py  ur3.py
src/orquestrador/adapters/stt/: __init__.py  local_stt.py
src/orquestrador/adapters/vision/: stereo.py
src/orquestrador/app/: simulation.py
src/orquestrador/core/: geometry.py
src/orquestrador/domain/: models.py
src/orquestrador/services/: orchestrator.py
